--- a/src/components/Spinner/Spinner.css
+++ b/src/components/Spinner/Spinner.css
@@ -1,9 +1,11 @@
-.Loader {
-  display: inline-block;
+.Spinner {
+  position: absolute;
   width: 64px;
   height: 64px;
+  top: 50%;
+  left: 50%;
 }
-.Loader:after {
+.Spinner:after {
   content: " ";
   display: block;
   width: 46px;
@@ -11,10 +13,10 @@
   margin: 1px;
   border-radius: 50%;
   border: 5px solid #fff;
-  border-color: #fff transparent #fff transparent;
-  animation: Loader 1.2s linear infinite;
+  border-color: rgb(97, 66, 66) transparent #fff transparent;
+  animation: Spinner 1.2s linear infinite;
 }
-@keyframes Loader {
+@keyframes Spinner {
   0% {
     transform: rotate(0deg);
   }
